# pvccoon

./: .gitignore  Cargo.toml  README.md  lexer.py  lexer_remake.py  requirements.txt  simple.vc  test.py  tokens.vctok  tokens_copy.vctok  transition_graph.dot  utils.py
Qs_Playground/: .~lock.DIEN-NUOC-THANG-04-DN1.xls#  2ndgrammar.md  Production.py  README.md  TableHandle.py  Untitled spreadsheet - Sheet1.csv  ast_maker.py  data.csv  example.vc  grammar copy.md  grammar.md  grammar.py  grammar_ver2 copy 2.md  grammar_ver2 copy 3.md  grammar_ver2 copy.md  grammar_ver2.md  lark_test.py  lexerToken.py  lparser.py  output.txt  output.vcps  parse_table.py  recur_parser.py  test.py  test2.py  test_data.csv  token_rules.lark
Qs_Playground/ChimTo2~/: chimto.csv  ll1_test.py  table_test.py
docs/dev_logs/manual_lexer_dev/: test.dot  vc_dfa.dot
docs/specification/: lamngcnguyen_vc.flex  note.md
example/: example_fib.vc  example_gcd.vctok  simple.vc
lexer/: .gitignore  Cargo.toml  readme.md  report.md  run_lexer.py
lexer/core/: lexer.py  utils.py
lexer/example/: example_fib.vctok  grammar.md
lexer/examples/: example_fib.vc
lexer/examples/our_examples/: hello.vc
lexer/output/: token.verbose.vctok  tokens.vctok
lexer/src/: main.rs
lexer/src/lexer/: mod.rs  state_transition_graph.dot
parser/: AST.py  Parser.py  TableHandle.py  example.vc  grammar.csv  lexerToken.py  ll1_grammar.md  lparser.py  output.vcps  parser_ast.py  parser_lexer.py  parser_table_handler.py  readme.md  requirements.txt  test.py  test2.py  token_rules.lark
parser/core/: ll1_grammar.md  parser.py  parser_ast.py  parser_lexer.py  parser_table_handler.py
parser/core/output/: output_division.vcps  output_example.vcps  output_example_fib.vcps  output_sample_pschain.vc.vcps  output_sample_pschain.vcps  output_sample_pscomp.vc.vcps  output_sample_pscomp.vcps  output_sample_psgeneric.vc.vcps  output_sample_psgeneric.vcps
parser/example/: division.vc  example.vc  example_fib.vc
rec_parser/: ll1_grammar.md  recur_parser.py  test2.py
src/: main.rs
src/lexer/: example_code.py  example_code.rs  mod.rs  state_transition_graph.dot  table_generator.rs  test.vc  test_data.csv  token.rs
src/lexer/idk/: vc_dfa.dot  vc_dfa_backup.dot  vc_dfa_float.dot
src/lexer/table/: vc_dfa.dot
src/lexer/test/: adu.vc
vc-ex/: README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vc-ex/syntaxes/: vc.tmLanguage.json
vc-lang/: CHANGELOG.md  README.md  package-lock.json  package.json
vc-lang/src/: extension.ts
vscode_plugin/vc/: CHANGELOG.md
